--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -7,20 +7,20 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="com.remotearth.fake_coder.chatapp.Message"/>
-        <import type="com.remotearth.fake_coder.chatapp.User"/>
-        <import type="com.remotearth.fake_coder.chatapp.viewModels.ChatViewModel"/>
+        <import type="com.remotearth.fake_coder.chatapp.pojos.Message"/>
+        <import type="com.remotearth.fake_coder.chatapp.pojos.User"/>
+        <import type="com.remotearth.fake_coder.chatapp.screens.fragments.chat.ChatViewModel"/>
         <import type="android.view.View"/>
 
-        <variable name="message" type="Message"/>
-        <variable name="user" type="User"/>
-        <variable name="chatViewModel" type="ChatViewModel"/>
+        <variable name="message" type="com.remotearth.fake_coder.chatapp.pojos.Message"/>
+        <variable name="user" type="com.remotearth.fake_coder.chatapp.pojos.User"/>
+        <variable name="chatViewModel" type="com.remotearth.fake_coder.chatapp.screens.fragments.chat.ChatViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screens.fragments.ChatFragment">
+        tools:context=".screens.fragments.chat.ChatFragment">
 
         <ProgressBar
             android:id="@+id/loading"
