--- a/app/src/main/res/layout/chat_list_fragment.xml
+++ b/app/src/main/res/layout/chat_list_fragment.xml
@@ -6,10 +6,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="com.remotearth.fake_coder.chatapp.viewModels.ChatListViewModel"/>
+        <import type="com.remotearth.fake_coder.chatapp.screens.fragments.chatList.ChatListViewModel"/>
         <import type="android.view.View"/>
 
-        <variable name="chatListViewModel" type="ChatListViewModel"/>
+        <variable name="chatListViewModel" type="com.remotearth.fake_coder.chatapp.screens.fragments.chatList.ChatListViewModel"/>
         <variable name="userId" type="String"/>
     </data>
 
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".screens.fragments.ChatListFragment">
+        tools:context=".screens.fragments.chatList.ChatListFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
