--- a/app/src/main/res/layout/header_user_profile.xml
+++ b/app/src/main/res/layout/header_user_profile.xml
@@ -6,11 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="com.remotearth.fake_coder.chatapp.User"/>
-        <import type="com.remotearth.fake_coder.chatapp.viewModels.ChatViewModel"/>
+        <import type="com.remotearth.fake_coder.chatapp.pojos.User"/>
+        <import type="com.remotearth.fake_coder.chatapp.screens.fragments.chat.ChatViewModel"/>
 
-        <variable name="user" type="User"/>
-        <variable name="chatViewModel" type="ChatViewModel"/>
+        <variable name="user" type="com.remotearth.fake_coder.chatapp.pojos.User"/>
+        <variable name="chatViewModel" type="com.remotearth.fake_coder.chatapp.screens.fragments.chat.ChatViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
