--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -5,18 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="com.remotearth.fake_coder.chatapp.Auth"/>
-        <import type="com.remotearth.fake_coder.chatapp.viewModels.LoginViewModel"/>
+        <import type="com.remotearth.fake_coder.chatapp.pojos.Auth"/>
+        <import type="com.remotearth.fake_coder.chatapp.screens.fragments.login.LoginViewModel"/>
         <import type="android.view.View"/>
 
-        <variable name="auth" type="Auth"/>
-        <variable name="loginViewModel" type="LoginViewModel"/>
+        <variable name="auth" type="com.remotearth.fake_coder.chatapp.pojos.Auth"/>
+        <variable name="loginViewModel" type="com.remotearth.fake_coder.chatapp.screens.fragments.login.LoginViewModel"/>
     </data>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screens.fragments.LoginFragment">
+        tools:context=".screens.fragments.login.LoginFragment">
 
         <ProgressBar
             android:id="@+id/loading"
