--- a/app/src/main/res/layout/user_info_fragment.xml
+++ b/app/src/main/res/layout/user_info_fragment.xml
@@ -5,18 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="com.remotearth.fake_coder.chatapp.User"/>
-        <import type="com.remotearth.fake_coder.chatapp.viewModels.UserInfoViewModel"/>
+        <import type="com.remotearth.fake_coder.chatapp.pojos.User"/>
+        <import type="com.remotearth.fake_coder.chatapp.screens.fragments.userInfo.UserInfoViewModel"/>
         <import type="android.view.View"/>
 
-        <variable name="user" type="User"/>
-        <variable name="userInfoViewModel" type="UserInfoViewModel"/>
+        <variable name="user" type="com.remotearth.fake_coder.chatapp.pojos.User"/>
+        <variable name="userInfoViewModel" type="com.remotearth.fake_coder.chatapp.screens.fragments.userInfo.UserInfoViewModel"/>
     </data>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screens.fragments.UserInfoFragment">
+        tools:context=".screens.fragments.userInfo.UserInfoFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
