--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="com.remotearth.fake_coder.chatapp.User"/>
-        <variable name="user" type="User"/>
+        <import type="com.remotearth.fake_coder.chatapp.pojos.User"/>
+        <variable name="user" type="com.remotearth.fake_coder.chatapp.pojos.User"/>
     </data>
 
     <LinearLayout
